# template-1

./: .editorconfig  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-powershell.yml  ci-python.yml  ci.yml  dependabot-automerge.yml  gitleaks.yml  pr-title.yml  release-please-automerge.yml  release-please.yml
powershell/: PyShellStarter.psd1  PyShellStarter.psm1  Template.psd1
src/template_1/: __init__.py
tests/: PyShellStarter.Tests.ps1  Template.Tests.ps1  test_hello.py
