[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-1"
version = "0.1.1"
description = "Template-Repo für Python und PowerShell"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
